# josepy

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.rst  SECURITY.md  constraints.txt  key.pem  mypy.ini  pyproject.toml  pytest.ini  readthedocs.org.requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: assigned.yaml  check.yaml  merged.yaml  review_requested.yaml  stale.yaml
docs/: conf.py  requirements.txt
examples/: pem_conversion.py
src/josepy/: __init__.py  b64.py  b64_test.py  errors.py  interfaces.py  json_util.py  json_util_test.py  jwa.py  jwa_test.py  jwk.py  jwk_test.py  jws.py  jws_test.py  magic_typing.py  magic_typing_test.py  test_util.py  util.py  util_test.py
src/josepy/testdata/: README  secp256r1_key.pem  secp384r1_key.pem  secp521r1_key.pem  x25519_key.pem  x448_key.pem
tests/: b64_test.py  errors_test.py  init_test.py  init_tests.py  interfaces_test.py  json_util_test.py  jwa_test.py  jwk_test.py  jws_test.py  magic_typing_test.py  test_util.py  util_test.py
tests/testdata/: README  ed25519_key.pem  ed448_key.pem  x25519_key.pem  x448_key.pem
tools/: release.sh
