# PEP-517 build

[build-system]
requires = ["poetry_core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

# Poetry tooling configuration

[tool.poetry]
name = "josepy"
version = "1.15.0.dev0"
description = "JOSE protocol implementation in Python"
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
homepage = "https://github.com/certbot/josepy"
authors = ["Certbot Project <certbot-dev@eff.org>"]
readme = "README.rst"
include = [
    "CHANGELOG.rst",
    "CONTRIBUTING.md",
    "docs", "tests",
]

[tool.poetry.dependencies]
# This should be kept in sync with the value of target-version in our
# configuration for black below.
python = "^3.8"
# load_pem_private/public_key (>=0.6)
# rsa_recover_prime_factors (>=0.8)
# add sign() and verify() to asymetric keys (RSA >=1.4, ECDSA >=1.5)
# add not_valid_after_utc() ">=42.0.0"
cryptography = ">=42.0.0"
# >=4.3.0 is needed for Python 3.10 support
sphinx = {version = ">=4.3.0", optional = true}
sphinx-rtd-theme = {version = ">=1.0", optional = true}

[tool.poetry.dev-dependencies]
# coverage[toml] extra is required to read the coverage config from pyproject.toml
coverage = {version = ">=4.0", extras = ["toml"]}
# importlib_resources 1.3 was the version included in Python 3.9 which
# introduced the functionality we are using. See
# https://github.com/python/importlib_resources/tree/7f4fbb5ee026d7610636d5ece18b09c64aa0c893#compatibility.
importlib_resources = {version = ">=1.3", python = "<3.9"}
mypy = "*"
types-pyRFC3339 = "*"
types-requests = "*"
types-setuptools = "*"
typing-extensions = "*"
pre-commit = "*"
pytest = ">=2.8.0"
pytest-cov = "*"
tox = "*"
twine = "*"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.scripts]
jws = "josepy.jws:CLI.run"

# Black tooling configuration
[tool.black]
line-length = 100
# This should be kept in sync with the version of Python specified in poetry's
# dependencies above.
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

# Mypy tooling configuration

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true

# Pytest tooling configuration

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # We ignore our own warning about dropping Python 3.8 support.
    "ignore:Python 3.8 support will be dropped:DeprecationWarning",
]
norecursedirs = "*.egg .eggs dist build docs .tox"

# Isort tooling configuration

[tool.isort]
combine_as_imports = false
default_section = "THIRDPARTY"
known_first_party = "josepy"
line_length = 79
profile = "black"

# Coverage tooling configuration

[tool.coverage.run]
branch = true
source = ["josepy"]

[tool.coverage.paths]
source = [
   ".tox/*/lib/python*/site-packages/josepy",
   ".tox/pypy*/site-packages/josepy",
]

[tool.coverage.report]
show_missing = true
